                                  _   _ ____  _
                              ___| | | |  _ \| |
                             / __| | | | |_) | |
                            | (__| |_| |  _ <| |___
                             \___|\___/|_| \_\_____|

                                  Changelog

Daniel Stenberg (1 June 2009)
- Claes Jakobsson fixed the configure script to better find and use NSS
  without pkg-config.

Yang Tse (1 Jun 2009)
- John E. Malmberg provided a VMS specific clean-up for curl.h, and pointed
  out that the configure script was failing to detect the timeval struct on
  VMS when building with _XOPEN_SOURCE_EXTENDED undefined due to definition
  taking place in socket.h instead of time.h.  I have adjusted configure
  script to also include this header when checking struct timeval.

Daniel Stenberg (27 May 2009)
- Frank McGeough provided a small OpenSSL #include fix to make libcurl compile
  fine with Nokia 5th edition 1.0 SDK for Symbian.

- Andre Guibert de Bruet found a call to a OpenSSL function that didn't check
  for a failure properly.

- Mike Crowe pointed out that setting CURLOPT_USERPWD to NULL used to clear
  the auth credentials back in 7.19.0 and earlier while now you have to set ""
  to get the same effect. His patch brings back the ability to use NULL.

- Claes Jakobsson fixed libcurl-NSS to build fine even without the
  PK11_CreateGenericObject() function.

Daniel Stenberg (25 May 2009)
- bug report #2796358 (http://curl.haxx.se/bug/view.cgi?id=2796358) pointed
  out that the cookie parser would leak memory when it parses cookies that are
  received with domain, path etc set multiple times in the same header. While
  such a cookie is questionable, they occur in the wild and libcurl no longer
  leaks memory for them. I added such a header to test case 8.

Daniel Fandrich (22 May 2009)
- Removed some obsolete digest code that caused a valgrind error in test 551.

Daniel Fandrich (20 May 2009)